--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="minecraft:deeplink" content="minecraft://acceptRealmInvite?inviteID=VYgJPHJPYTA">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans:regular,bold,italic,bolditalic">
-    <link rel="stylesheet" href="/css/bundle.css">
+    <link rel="stylesheet" href="/css/style.css">
 
 <body class="site-body">
     <div id="ms-cookie-consent-banner"></div>
