--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bergabunglah dengan teman-teman Anda di dunia mereka: SEKKEI REBORN</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="style.css">
     <meta property="og:url" content="https://open.minecraft.net/pocket/realms/invite/VYgJPHJPYTA">
     <meta property="minecraft:deeplink" content="minecraft://acceptRealmInvite?inviteID=VYgJPHJPYTA">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans:regular,bold,italic,bolditalic">
