--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <title>Bergabunglah dengan teman-teman Anda di dunia mereka: SEKKEI REBORN</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="bootstrap.min.css">
+    <link rel="stylesheet" href="bootstrap/bootstrap.css">
     <link rel="stylesheet" href="bootstrap.css">
     <meta property="og:url" content="https://open.minecraft.net/pocket/realms/invite/VYgJPHJPYTA">
     <meta property="minecraft:deeplink" content="minecraft://acceptRealmInvite?inviteID=VYgJPHJPYTA">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans:regular,bold,italic,bolditalic">
+    <script
 
 
 <body class="site-body">
@@ -60,7 +62,7 @@
             </div>
         </div>
 
-
+        <script src="bootstrap.bundle.min.js"></script>
     </footer>
 
 </body>
