--- a/index.html
+++ b/index.html
@@ -90,7 +90,11 @@
         </div>
 
     </footer>
-
+  <script src="/lib/jquery/dist/jquery.min.js"></script>
+    <script src="https://az725175.vo.msecnd.net/scripts/jsll-4.js"></script>
+    <script src="/lib/platform.js"></script>
+    <script src="/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/js/bundle.js?v=4UoDuJEaCsAy4owsgbsaegfw-Vg" 
 </body>
 
 </html>
