--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bergabunglah dengan teman-teman Anda di dunia mereka: SEKKEI REBORN</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
      <meta property="og:url" content="https://open.minecraft.net/pocket/realms/invite/VYgJPHJPYTA">
     <meta property="og:title" content="SEKKEI &quot;Wahyu Edition&quot;">
     <meta property="og:description" content="Click the link and join my Minecraft realm!">
