--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
         <div class="col-lg-6 text-center">
           <h2>SELAMAT DATANG <span>SEKKEI REBORN</span></h2>
           <p>Tetap taati aturan, bersenang senanglah, berkarylah dan tetap saling berteman.</p>
-          <a href="minecraft://acceptRealmInvite?inviteID=VYgJPHJPYTA" class="btn-get-started">Link realm</a>
+          <p><strong> MAAF, untuk sementara Realm belum tersedia, stay tuned!</strong></p>
+          <a href="#" class="btn-get-started">Coming Soon</a> 
+          <!--<a href="minecraft://acceptRealmInvite?inviteID=VYgJPHJPYTA" class="btn-get-started">Link realm</a>-->
         </div>
       </div>
     </div>
