--- a/index.html
+++ b/index.html
@@ -67,10 +67,12 @@
       <div class="row justify-content-center">
         <div class="col-lg-6 text-center">
           <h2>SELAMAT DATANG <span>SEKKEI REBORN</span></h2>
-          <p>Tetap taati aturan, bersenang senanglah, berkarylah dan tetap saling berteman.</p>
+          <p>Tetap taati aturan, bersenang senanglah, berkaryalah dan tetap saling berteman.</p>
+          <!--<a href="minecraft://acceptRealmInvite?inviteID=VYgJPHJPYTA" class="btn-get-started">Buka Minecraft</a>-->
           <p><strong> MAAF, untuk sementara Realm belum tersedia, stay tuned!</strong></p>
-          <a href="#" class="btn-get-started">Coming Soon</a> 
-          <!--<a href="minecraft://acceptRealmInvite?inviteID=VYgJPHJPYTA" class="btn-get-started">Link realm</a>-->
+          <a href="#" class="btn-get-started">Coming Soon</a>
+          <!--<p><strong> MAAF, Link Realm telah ditutup, silahkan kontak Admin jika ingin bermain.</strong></p>
+          <a href="https://wa.me/+6285728851293" class="btn-get-started">Kontak Admin</a>-->
         </div>
       </div>
     </div>
