--- a/index.html
+++ b/index.html
@@ -47,7 +47,13 @@
         <!-- <img src="assets/img/logo.png" alt=""> -->
         <h1>SEKKEI REBORN</h1>
       </a>
-
+      <nav id="navbar" class="navbar">
+        <ul>
+          <li><a href="index.html" class="active">Beranda</a></li>
+          <li><a href="dw.html">MAP Realm</a></li>
+        </ul>
+      </nav>
+    </div>
       <div class="header-social-links">
         <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
         <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
