--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   ======================================================== -->
 </head>
 
-<body>
+<body data-aos-easing="ease-in-out" data-aos-duration="1000" data-aos-delay="0" class="mobile-nav-active">
 
   <!-- ======= Header ======= -->
   <header id="header" class="header d-flex align-items-center fixed-top">
