--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   ======================================================== -->
 </head>
 
-<body data-aos-easing="ease-in-out" data-aos-duration="1000" data-aos-delay="0" class="mobile-nav-active">
+<body>
 
   <!-- ======= Header ======= -->
   <header id="header" class="header d-flex align-items-center fixed-top">
@@ -54,7 +54,8 @@
         </ul>
       </nav>
     </div>
-      
+      <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
+      <i class="mobile-nav-toggle mobile-nav-hide bi bi-x d-none"></i>
     </div>
   </header><!-- End Header -->
 
