--- a/dw.html
+++ b/dw.html
@@ -69,8 +69,8 @@
 
             <nav id="navbar" class="navbar" >
                 <ul>
-                    <li><a href="https://flistzx.github.io/SEKKEI-REBORN/">Beranda</a></li>
-                    <li><a href="index.htmlc">Realm</a></li>
+                    <li><a href="index.html">Beranda</a></li>
+                    <li><a href="index.html">Realm</a></li>
                 </ul>
             </nav>
         </div>
