--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/photofolio-bootstrap-photography-website-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">FListZX</a>
+        Designed by <a href="https://flistzx.github.io/AMF/">FListZX</a>
       </div>
     </div>
   </footer><!-- End Footer -->
